--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Build the package
         run: |
           python setup.py sdist bdist_wheel
+        working-directory: ./  # Adjust if `setup.py` is in a subdirectory
 
       - name: Publish to PyPI
         env:
@@ -32,3 +33,4 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
           twine upload dist/*
+        working-directory: ./  # Adjust if `dist` is in a subdirectory
