--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,5 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
-          twine upload --verbose dist/*
+          pwd && find . && twine upload --verbose dist/*
         working-directory: ./markitanalysis  # Adjust if `dist` is in a subdirectory
