--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,27 +2,29 @@ name: Build and Release markitanalysis
 
 on:
   workflow_dispatch:
-  #push:
-    #branches: [ main ]
 
 jobs:
   build_and_release:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Python environment
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install wheel
+        run: |
+          python -m pip install --upgrade pip
+          pip install wheel setuptools  # Install setuptools
 
       - name: Build the distribution
         working-directory: ./markitanalysis
-        run: python3 setup.py bdist_wheel
+        run: |
+          python setup.py sdist bdist_wheel
 
       - name: Create the archive
         run: |
