--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Create the archive
         run: |
           cd ..
-          tar -zcvf markitanalysis.tar.gz markitanalysis/
+          tar -zcvf ./markitanalysis.tar.gz ./markitanalysis/
 
       - name: Create a release
         uses: actions/create-release@v1
