--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
       - name: Create the archive
         run: |
           cd ..
+          pwd
+          find .
           tar -zcvf ./markitanalysis.tar.gz ./markitanalysis/
 
       - name: Create a release
