--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,46 +7,51 @@ jobs:
   build_and_release:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Allow reading repository contents
-      id-token: write  # Allow creating and using JWT tokens for authentication
+      contents: write  # Allow reading and writing repository contents
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Step 2: Set up Python
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: '3.12'  # Use Python 3.12
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade pip setuptools wheel twine
 
+      # Step 4: Build the distribution
       - name: Build the distribution
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        working-directory: ./markitanalysis
+        working-directory: ./markitanalysis  # Adjust to match your repo structure
         run: |
-          python setup.py bdist_wheel
+          python setup.py bdist_wheel --verbose 2>&1 | tee build.log
 
+      # Step 5: Create the archive
       - name: Create the archive
         run: |
           tar -zcvf markitanalysis.tar.gz markitanalysis/
 
+      # Step 6: Create a release
       - name: Create a release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ github.sha }}
+          tag_name: ${{ github.sha }}  # Use the commit SHA as the tag name
           release_name: markitanalysis Release ${{ github.sha }}
           body: |
             Built and packaged markitanalysis using commit ${{ github.sha }}
-            Download the latest release: ${{ github.server_url }}/releases/download/${{ github.sha }}/markitanalysis.tar.gz
+            Download the latest release: ${{ github.server_url }}/{{ github.repository }}/releases/download/${{ github.sha }}/markitanalysis.tar.gz
           draft: false
           prerelease: false
-          token: ${{ secrets.GITHUB_TOKEN }} 
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Automatically provided by GitHub
 
+      # Step 7: Log release download URL
       - name: Log release download URL
         run: |
           echo "Download the latest release:"
-          echo "${{ github.server_url }}/releases/download/${{ github.sha }}/markitanalysis.tar.gz"
+          echo "${{ github.server_url }}/{{ github.repository }}/releases/download/${{ github.sha }}/markitanalysis.tar.gz"
