--- a/.github/workflows/release2.yml
+++ b/.github/workflows/release2.yml
@@ -45,26 +45,26 @@ jobs:
 
       # Step 7: Create a release
       - name: Create a release
-        id: create_release  # Assign an ID to reference this step's outputs
+        id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ steps.tag.outputs.tag_name }}  # Use dynamically generated tag
+          tag_name: ${{ steps.tag.outputs.tag_name }}
           release_name: "markitanalysis Release ${{ steps.tag.outputs.tag_name }}"
           body: |
             Built and packaged markitanalysis using commit ${{ github.sha }}
             Download the latest release:
-            - [markitanalysis.zip](${{ github.server_url }}/{{ github.repository }}/releases/download/${{ steps.tag.outputs.tag_name }}/markitanalysis.zip)
-            - [markitanalysis.tar.gz](${{ github.server_url }}/{{ github.repository }}/releases/download/${{ steps.tag.outputs.tag_name }}/markitanalysis.tar.gz)
+            - [markitanalysis.zip](${{ github.server_url }}/${{ github.repository }}/releases/download/${{ steps.tag.outputs.tag_name }}/markitanalysis.zip)
+            - [markitanalysis.tar.gz](${{ github.server_url }}/${{ github.repository }}/releases/download/${{ steps.tag.outputs.tag_name }}/markitanalysis.tar.gz)
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Automatically provided by GitHub
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Step 8: Upload release assets with custom names
       - name: Upload release assets (ZIP)
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  # Use the upload URL from the create-release step
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./markitanalysis.zip
           asset_name: markitanalysis.zip
           asset_content_type: application/zip
@@ -72,7 +72,7 @@ jobs:
       - name: Upload release assets (TAR.GZ)
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  # Use the upload URL from the create-release step
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./markitanalysis.tar.gz
           asset_name: markitanalysis.tar.gz
           asset_content_type: application/gzip
@@ -81,5 +81,5 @@ jobs:
       - name: Log release download URL
         run: |
           echo "Download the latest release:"
-          echo "${{ github.server_url }}/{{ github.repository }}/releases/download/${{ steps.tag.outputs.tag_name }}/markitanalysis.zip"
-          echo "${{ github.server_url }}/{{ github.repository }}/releases/download/${{ steps.tag.outputs.tag_name }}/markitanalysis.tar.gz"
+          echo "${{ github.server_url }}/${{ github.repository }}/releases/download/${{ steps.tag.outputs.tag_name }}/markitanalysis.zip"
+          echo "${{ github.server_url }}/${{ github.repository }}/releases/download/${{ steps.tag.outputs.tag_name }}/markitanalysis.tar.gz"
