--- a/.github/workflows/release2.yml
+++ b/.github/workflows/release2.yml
@@ -7,7 +7,7 @@ jobs:
   build_and_release:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Allow reading and writing repository contents
+      contents: write  # Allow repository access
 
     steps:
       # Step 1: Checkout the repository
@@ -33,9 +33,9 @@ jobs:
 
       # Step 5: Build the distribution
       - name: Build the distribution
-        working-directory: ./markitanalysis  # Adjust to match your repo structure
+        working-directory: ./markitanalysis  # Adjust if setup.py is inside this directory
         run: |
-          python setup.py bdist_wheel --verbose 2>&1 | tee build.log
+          python setup.py bdist_wheel --verbose
 
       # Step 6: Create the archive files
       - name: Create the archive files
@@ -60,7 +60,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Step 8: Upload release assets with custom names
+      # Step 8: Upload custom release assets
       - name: Upload release assets (ZIP)
         uses: actions/upload-release-asset@v1
         with:
@@ -77,9 +77,7 @@ jobs:
           asset_name: markitanalysis.tar.gz
           asset_content_type: application/gzip
 
-      # Step 9: Log release download URL
-      - name: Log release download URL
+      # Step 9: Remove default "Source code" assets
+      - name: Remove default "Source code" assets
         run: |
-          echo "Download the latest release:"
-          echo "${{ github.server_url }}/${{ github.repository }}/releases/download/${{ steps.tag.outputs.tag_name }}/markitanalysis.zip"
-          echo "${{ github.server_url }}/${{ github.repository }}/releases/download/${{ steps.tag.outputs.tag_name }}/markitanalysis.tar.gz"
+          echo "Custom assets uploaded. Default source code assets cannot be removed programmatically."
