test for the final commit

--- a/.github/workflows/release2.yml
+++ b/.github/workflows/release2.yml
@@ -7,7 +7,7 @@ jobs:
   build_and_release:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Required for uploading assets
+      contents: write  # Required for creating and modifying releases
 
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -36,7 +36,7 @@ jobs:
 
       # Step 5: Build the distribution
       - name: Build the distribution
-        working-directory: ./markitanalysis  # Adjust if `setup.py` is inside this directory
+        working-directory: ./markitanalysis
         run: |
           python setup.py bdist_wheel --verbose
 
@@ -67,3 +67,14 @@ jobs:
           asset_path: ./markitanalysis.tar.gz
           asset_name: markitanalysis.tar.gz
           asset_content_type: application/gzip
+
+      # Step 9: Delete default Source code (zip) and Source code (tar.gz) assets
+      - name: Remove default source code assets
+        run: |
+          ASSETS=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/releases/${{ steps.create_release.outputs.id }}/assets" | jq -r '.[] | select(.name | test("Source code")) | .id')
+
+          for ASSET_ID in $ASSETS; do
+            curl -X DELETE -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              "https://api.github.com/repos/${{ github.repository }}/releases/assets/$ASSET_ID"
+          done
